k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grm
  labels:
    app.kubernetes.io/name: grm
    app.kubernetes.io/part-of: grm
