k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grm-app
  namespace: grm
  labels:
    app.kubernetes.io/name: grm
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grm
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
